non_exhaustive token

--- a/v2.md
+++ b/v2.md
@@ -1,6 +1,7 @@
 # Changes
 - Remove remnant `cfg(no_track_caller)`
 - minor QOL & style tweaks
+- `#[non_exhaustive]` for `Token`
 
 # WIP
 - Expose + friendly `Error` API
