refactor ser stuff + QOL

--- a/v2.md
+++ b/v2.md
@@ -1,10 +1,19 @@
 # Changes
+- (BREAKING) `#[non_exhaustive]` for `Token`
+- (BREAKING) Two new `Token` lifetimes: `Token<'local, 'de: 'local>`
+- Refactor complex serializer impls
+
+# Internal Changes
 - Remove remnant `cfg(no_track_caller)`
 - minor QOL & style tweaks
-- `#[non_exhaustive]` for `Token`
+- New ErrorKind
+
 
 # WIP
 - Expose + friendly `Error` API
 - Add `Token::I128` and `Token::U128`
 
 # TODO
+- token::float(nan) partialeq
+- variant_index
+- skipping fields
