--- a/v2.md
+++ b/v2.md
@@ -1,7 +1,7 @@
 # Changes
 - (BREAKING) `#[non_exhaustive]` for `Token`
 - (BREAKING) Two new `Token` lifetimes: `Token<'local, 'de: 'local>`
-- Refactor complex serializer impls
+- (~BREAKING) Refactor complex serializer impls
 
 # Internal Changes
 - Remove remnant `cfg(no_track_caller)`
@@ -17,3 +17,4 @@
 - token::float(nan) partialeq
 - variant_index
 - skipping fields
+- configure de_both?
