skip struct fields

--- a/v2.md
+++ b/v2.md
@@ -2,6 +2,7 @@
 - (BREAKING) `#[non_exhaustive]` for `Token`
 - (BREAKING) Two new `Token` lifetimes: `Token<'local, 'de: 'local>`
 - (~BREAKING) Refactor complex serializer impls
+- skipping struct fields (optional)
 
 # Internal Changes
 - Remove remnant `cfg(no_track_caller)`
@@ -16,6 +17,5 @@
 # TODO
 - token::float(nan) partialeq
 - variant_index
-- skipping fields
 - configure de_both?
 - maybe just one token lt? `Token<'t>`
